<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SplashActivity">

    <ImageView
        android:layout_width="128sp"
        android:layout_height="128sp"
        android:layout_marginBottom="18sp"


        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/fitplus_logo_black_main" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="42sp"
        android:textColor="@color/accent"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moto"
        android:textSize="12sp"
        android:textColor="@color/main_text"
        android:gravity="center"
        android:paddingBottom="40sp"        />

</androidx.appcompat.widget.LinearLayoutCompat>