<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutDetailsActivity"
    android:background="@color/primary">

    <LinearLayout
        android:id="@+id/workout_details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/workout_details_header"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/workout_details_header"
        android:text="@string/save_workout"
        android:textSize="14sp"
        android:textColor="@color/main_text"
        android:padding="12dp"
        android:id="@+id/save_workout_button"
        />

    <LinearLayout
        android:id="@+id/get_started_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/workout_details_header"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:layout_marginVertical="12dp"
            android:src="@drawable/fitplus_logo_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started_title"
            android:textColor="@color/main_text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started_description"
            android:textColor="@color/secondary"
            android:textSize="11sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_workoutExercises"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/workout_details_header"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="96dp"
        android:visibility="visible">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/add_exercise_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_accent_button_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="TouchTargetSizeCheck">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:src="@drawable/add_icon_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/add_exercise"
                android:textColor="@color/primary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete_workout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_exercise_button"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_secondary_button_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="TouchTargetSizeCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/delete_workout"
                android:textColor="@color/main_text"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>